--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -265,9 +265,10 @@
           </a>
 
           <div class="dropdown-menu dropdown-menu-right">
-            <a class="dropdown-item" href="http://testinfinitum.blackwellglobal.com/bgisetting-test2/index.action">Live 1 setting</a>
-            <a class="dropdown-item" href="http://testinfinitum.blackwellglobal.com/bgisetting-test/index.action">Live 2 Setting</a>
+            <a class="dropdown-item" href="http://220.128.56.250:8080/live1/index.action">Live 1 setting</a>
+            <a class="dropdown-item" href="http://220.128.56.250:8080/live2/index.action">Live 2 Setting</a>
             <a class="dropdown-item" href="http://testinfinitum.blackwellglobal.com/bgisetting/index.action">Live 3 Setting</a>
+
 
           </div>
         </li>
