--- a/Risk_Aaron/app/templates/base.html
+++ b/Risk_Aaron/app/templates/base.html
@@ -313,6 +313,9 @@
                   <li><a class="dropdown-item" href="https://backoffice.cfhclearing.com">CFH Back Office</a></li>
                 </ul>
               </li>
+              <li><a class="dropdown-item" href="https://docs.google.com/spreadsheets/d/1U9qHiJyITUoXqsFDX9hL19i1zWQbTNedpb474X0n93U/edit#gid=0">MT5 Symbol Creation (BO and Risk)</a></li>
+
+
 
               <li class="nav-item dropleft">
                 <a class="dropdown-item dropdown-toggle" href="#" id="navbarDropdown11" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
