--- a/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
+++ b/Risk_Aaron/app/templates/Wbwrk_Multitable_Borderless.html
@@ -629,7 +629,7 @@
     <div class="col-lg-6 col-md-6 col-sm-12" id="Data_table_Div{{ loop.index  }}">
   {% else %}
   <!-- Would read as P for value.  -->
-    <div class="chart col-lg-12 col-md-12 col-sm-12" id="plot{{ loop.index  }}">
+    <div class="chart col-lg-6 col-md-6 col-sm-12" id="plot{{ loop.index  }}">
   {% endif %}
 
    {% include '_pleaseWait.html' %}
@@ -646,7 +646,7 @@
   <br>
   {% if description %}
   <br><br>
-  <span class="border border-secondary rounded bg-light p-4">{{ description }}</span>
+  <span class="border border-secondary col-lg-12 col-md-12 col-sm-12 rounded bg-light p-4">{{ description }}</span>
   <br>
   {% endif %}
 
